library/src/libqstyleoption.h

typedef struct QStyleHintReturn QStyleHintReturn;
typedef struct QStyleHintReturnMask QStyleHintReturnMask;
typedef struct QStyleHintReturnVariant QStyleHintReturnVariant;
QTLIBC_API QStyleHintReturn* QStyleHintReturn_new();
QTLIBC_API QStyleHintReturn* QStyleHintReturn_new2(QStyleHintReturn* param1);
QTLIBC_API QStyleHintReturn* QStyleHintReturn_new3(int version);
QTLIBC_API QStyleHintReturn* QStyleHintReturn_new4(int version, int typeVal);
QTLIBC_API void QStyleHintReturn_OperatorAssign(QStyleHintReturn* self, QStyleHintReturn* param1);
QTLIBC_API void QStyleHintReturn_Delete(QStyleHintReturn* self);
QTLIBC_API QStyleHintReturnMask* QStyleHintReturnMask_new();
QTLIBC_API QStyleHintReturnMask* QStyleHintReturnMask_new2(QStyleHintReturnMask* param1);
QTLIBC_API void QStyleHintReturnMask_OperatorAssign(QStyleHintReturnMask* self, QStyleHintReturnMask* param1);
QTLIBC_API void QStyleHintReturnMask_Delete(QStyleHintReturnMask* self);
QTLIBC_API QStyleHintReturnVariant* QStyleHintReturnVariant_new();
QTLIBC_API QStyleHintReturnVariant* QStyleHintReturnVariant_new2(QStyleHintReturnVariant* param1);
QTLIBC_API void QStyleHintReturnVariant_OperatorAssign(QStyleHintReturnVariant* self, QStyleHintReturnVariant* param1);
QTLIBC_API void QStyleHintReturnVariant_Delete(QStyleHintReturnVariant* self);