src/qt/libqstyleoption.bf

extension CQt
{
	[LinkName("QStyleHintReturn_new")]
	public static extern void* QStyleHintReturn_new();
	[LinkName("QStyleHintReturn_new2")]
	public static extern void* QStyleHintReturn_new2(void* param1);
	[LinkName("QStyleHintReturn_new3")]
	public static extern void* QStyleHintReturn_new3(int32 version);
	[LinkName("QStyleHintReturn_new4")]
	public static extern void* QStyleHintReturn_new4(int32 version, int32 typeVal);
	[LinkName("QStyleHintReturn_OperatorAssign")]
	public static extern void QStyleHintReturn_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QStyleHintReturn_Delete")]
	public static extern void QStyleHintReturn_Delete(void* self);
}
public interface IQStyleHintReturnMask
{
	void* NativePtr { get; }
}
public class QStyleHintReturnMask : IQStyleHintReturnMask, IQStyleHintReturn
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleHintReturnMask_new();
	}
	
	public ~this()
	{
		CQt.QStyleHintReturnMask_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(IQStyleHintReturnMask param1)
	{
		CQt.QStyleHintReturnMask_OperatorAssign(this.nativePtr, (param1 == default) ? default : (void*)param1.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleHintReturnMask_new")]
	public static extern void* QStyleHintReturnMask_new();
	[LinkName("QStyleHintReturnMask_new2")]
	public static extern void* QStyleHintReturnMask_new2(void* param1);
	[LinkName("QStyleHintReturnMask_OperatorAssign")]
	public static extern void QStyleHintReturnMask_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QStyleHintReturnMask_Delete")]
	public static extern void QStyleHintReturnMask_Delete(void* self);
}
public interface IQStyleHintReturnVariant
{
	void* NativePtr { get; }
}
public class QStyleHintReturnVariant : IQStyleHintReturnVariant, IQStyleHintReturn
{
	protected void* nativePtr;
	public void* NativePtr => nativePtr;
	
	public this()
	{
		this.nativePtr = CQt.QStyleHintReturnVariant_new();
	}
	
	public ~this()
	{
		CQt.QStyleHintReturnVariant_Delete(this.nativePtr);
	}
	
	public void OperatorAssign(IQStyleHintReturnVariant param1)
	{
		CQt.QStyleHintReturnVariant_OperatorAssign(this.nativePtr, (param1 == default) ? default : (void*)param1.NativePtr);
	}
	
}
extension CQt
{
	[LinkName("QStyleHintReturnVariant_new")]
	public static extern void* QStyleHintReturnVariant_new();
	[LinkName("QStyleHintReturnVariant_new2")]
	public static extern void* QStyleHintReturnVariant_new2(void* param1);
	[LinkName("QStyleHintReturnVariant_OperatorAssign")]
	public static extern void QStyleHintReturnVariant_OperatorAssign(void* c_this, void* param1);
	/// Delete this object from C++ memory
	[LinkName("QStyleHintReturnVariant_Delete")]
	public static extern void QStyleHintReturnVariant_Delete(void* self);
}